--- a/index.html
+++ b/index.html
@@ -17,7 +17,20 @@
   <body>
     <main>
       <div class="card">
-        <div class="result"></div>
+        <div class="result">
+          <h3>Your Result</h3>
+          <div class="circle">
+            <h1>76</h1>
+            <p>of 100</p>
+          </div>
+          <div class="caption">
+            <h2>Great</h2>
+            <p>
+              Your performance exceed 65% of the people conducting the test
+              here!
+            </p>
+          </div>
+        </div>
         <div class="summary"></div>
       </div>
     </main>
