fetch and display data from json

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@500;700;800&display=swap"
       rel="stylesheet"
     />
-
+    <script src="script.js"></script>
     <title>Results Summary Component</title>
   </head>
   <body>
@@ -31,7 +31,10 @@
             </p>
           </div>
         </div>
-        <div class="summary"></div>
+        <div class="summary">
+          <h3>Summary</h3>
+          <div class="breakdown"></div>
+        </div>
       </div>
     </main>
   </body>
