add responsive styles to summary

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <div class="summary">
           <h3>Summary</h3>
           <div class="breakdown"></div>
+          <button>Continue</button>
         </div>
       </div>
     </main>
